Add job management
